# This file is part of the ops-lib-pgsql component for Juju Operator
# Framework Charms.
# Copyright 2020 Canonical Ltd.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the Lesser GNU General Public License version 3,
# as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranties of
# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR
# PURPOSE.  See the Lesser GNU General Public License for more details.
#
# You should have received a copy of the Lesser GNU General Public
# License along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

[metadata]
name = ops-lib-pgsql
url = https://github.com/canonical/ops-lib-pgsql
description = PostgreSQL database relation for Juju Operator Framework Charms
author = PostgreSQL Charmers
author_email = postgresql-charmers@lists.launchpad.net
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Juju=https://juju.is/
    Juju Operator Framework=https://pypi.org/project/ops/
version = attr: pgsql.VERSION
keywords = juju, charm, opslib, postgres, postgresql, pgsql
license = LGPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = pgsql, pgsql.opslib.pgsql
python_requires = >=3.6
install_requires = ops >= 0.8.0; PyYAML
tests_require = inflection
